--- a/src/App.css
+++ b/src/App.css
@@ -1,10 +1,46 @@
-/* .grid {
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  list-style: none;
+  text-decoration: none;
+}
+
+body {
+  background: rgba(20,58,182,0.637);
+}
+.navbar {
+  width: 100%;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 10px;
+  background: rgba(13, 49, 167, 0.856);
+  color: #fff;
+  margin-bottom: 30px;
+}
+
+.card-container {
   display: grid;
-  grid-template-columns: 1fr 1fr 1fr;
+  grid-template-columns: 1fr 1fr;
+  grid-gap: 4px;
+  width: 100%;
+  padding: 2px;
+}
+
+.card {
+ height: 200px; 
+ width: 100%;
+ border: 1px rgb(202, 199, 199) solid;
+ display: flex;
 }
 
 .link {
-  margin: 20px auto;  
-  border: 2px solid burlywood;
-  padding: 1rem;
-} */
+  width: 100%;
+  color: #fff;
+  transition: background 1s ease-in-out;
+}
+
+.link:hover {
+  background: rgba(13, 49, 167, 0.651);
+}
